Fix visited link color in dark mode
Visited links now inherit their color instead of using the browser
default purple, which was hard to see on dark backgrounds.

--- a/templates/style.css
+++ b/templates/style.css
@@ -35,6 +35,10 @@ a, button, audio, .cell-btn, .links-toggle-btn, .mini-btn {
     cursor: url('{{ assets }}/images/web/cursors/luigi_point.png'), pointer;
 }
 
+a:visited {
+    color: inherit;
+}
+
 /* Photocopy noise overlay */
 body::before {
     content: "";
